tests/compile_fail/struct_align_compat.stderr
error[E0080]: evaluation panicked: Failed to impl `ShaderLayoutCompat`: field `CompatSizeUnaligned::a1` (`Nested`) size (4) must be `SIZE_CONSTRAINT` (16) due to uniform layout constraints
  --> compile_fail/struct_align_compat.rs:9:1
   |
 9 | / shader_layout_compat! {
10 | |
11 | |     pub struct CompatSizeUnaligned {
12 | |         a1: Nested,
...  |
15 | | }
   | |_^ evaluation of `_` failed here
   |
   = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `shader_layout_compat` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0080]: evaluation panicked: Failed to impl `ShaderLayoutCompat`: field `CompatSizeUnaligned2::a2` (`Nested`) size (4) must be `SIZE_CONSTRAINT` (16) due to uniform layout constraints
  --> compile_fail/struct_align_compat.rs:17:1
   |
17 | / shader_layout_compat! {
18 | |
19 | |     pub struct CompatSizeUnaligned2 {
20 | |         a1: f32,
...  |
23 | | }
   | |_^ evaluation of `_` failed here
   |
   = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `shader_layout_compat` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
